--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -23,7 +24,12 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>"rel" specifies the relationship between the current document and the external document.</li>
+          <li>"href" specifies the location or URL of the external source.</li>
+          <li>A universal CSS selector is denoted by "*"</li>
+          <li> A class CSS selector is denoted by "." followed by the attribute</li>
         </ul>
       </section>
       <section class="card" id="git-section">
