--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that alows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Data types include Strings, Number, Boolean, Array and Object</li>
+          <li>Functions can be used to categorize or group a series of code you wish to re-use. It executes when you call the function name in the code.</li>
+          <li>The "For" loop uses a predictable pattern of indices to perform a task on all items on an array, using a single code block executed over and over.</li>
+          <li>The "For" loop contains 3 important statements: the starting point, the condition and the final statement that allows the arrar to iterate over each item.</li>
         </ul>
       </section>
     </main>
